[gd_scene load_steps=2 format=3 uid="uid://bgsnrx22q0kec"]

[ext_resource type="Script" path="res://script/vente.gd" id="1_biirx"]

[node name="vente" type="ColorRect"]
offset_right = 640.0
offset_bottom = 384.0
color = Color(0.462745, 0.247059, 0.0352941, 1)
script = ExtResource("1_biirx")

[node name="lblTitle" type="Label" parent="."]
layout_mode = 0
offset_right = 634.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 50
text = "Que voulez-vous vendre ?"
horizontal_alignment = 1

[node name="lblNoble" type="Label" parent="."]
layout_mode = 0
offset_top = 104.0
offset_right = 640.0
offset_bottom = 162.0
theme_override_font_sizes/font_size = 25
text = "acheter un titre de noblesse pour 20 d'or"
horizontal_alignment = 1

[node name="lblLake" type="Label" parent="."]
layout_mode = 0
offset_top = 176.0
offset_right = 640.0
offset_bottom = 231.0
theme_override_font_sizes/font_size = 25
text = "acheter le lac pour 10 d'or"
horizontal_alignment = 1

[node name="lblFarm" type="Label" parent="."]
layout_mode = 0
offset_top = 248.0
offset_right = 640.0
offset_bottom = 293.0
theme_override_font_sizes/font_size = 25
text = "acheter les champs pour 20 d'or"
horizontal_alignment = 1

[node name="lblQuit" type="Label" parent="."]
layout_mode = 0
offset_top = 320.0
offset_right = 640.0
offset_bottom = 384.0
theme_override_font_sizes/font_size = 40
text = "Quitter"
horizontal_alignment = 1

[node name="lblChoice" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 96.0
offset_right = 63.0
offset_bottom = 154.0
theme_override_font_sizes/font_size = 40
text = ">"
